# the-shape-of-movies

./: README.md
The Shape of Movies/: CMakeLists.txt  main.cpp  outils.cpp  outils.h
build-The-Shape-of-Movies-Desktop_Qt_5_12_6_MinGW_32_bit-Release/: CMakeCache.txt  Makefile  Shape_of_movies.cbp  cmake_install.cmake  launch_visual.bat
build-The-Shape-of-Movies-Desktop_Qt_5_12_6_MinGW_32_bit-Release/.cmake/api/v1/reply/: cache-v2-a0f002c85aa99711adaf.json  cmakeFiles-v1-858625995fb044fcd56d.json  codemodel-v2-74ac5d83747e0642ae51.json  index-2020-04-12T16-54-46-0952.json  target-Shape_of_movies-Release-3100ba10f94a0c36ea75.json
